# housing_tool_fair_price

./: .gitignore  LICENSE  README.md  pyproject.toml
data/raw/ub3/: sold_raw.json  (+4 more)
docs/: index.html
evals_housing_tool/: evaluation_design.md  pass_feasibility.md
evals_housing_tool/skeptics_10x10/: discover.py  grade_10x10.py  graders.py  inputs.py  loop.md  personas.md  run_10x10.py  snapshot_manifest.py
results/: README.md  index.json  sl6-maidenhead.json  ub3-hayes.json  valuation_sl6-maidenhead.json  valuation_ub3-hayes.json  valuation_w13-west-ealing.json  w13-west-ealing.json
scripts/: build_avm_template.py  build_baseline.py  build_dashboard_data.py  build_manifest.py  build_proxy_avm.py  build_results_data.py  build_snapshot.py  build_valuation_example.py  calibrate_geo.py  diagnose_methods.py  fetch_geo.py  fetch_ub3.py  run_ci.sh  run_proxy_sensitivity.py
tests/: test_abstain.py  test_abstain_metrics.py  test_agent.py  test_baseline.py  test_build_snapshot.py  test_calibrate.py  test_embedding.py  test_explain.py  test_gate.py  test_gate_catalog.py  test_geography.py  test_integration_plan1.py  test_integration_plan2.py  test_integration_plan4.py  test_judge.py  test_judge_calibration.py  test_llm.py  test_m1.py  test_m2.py  test_m3.py  test_method_result.py  test_metrics_calc.py  test_models.py  test_mutation.py  test_output.py  test_reconcile.py  test_records.py  test_reliability.py  test_residual.py  test_resolve.py  test_retrieval.py  test_rulegate.py  test_smoke.py  test_snapshot.py  test_vectorstore.py  test_verdict_calc.py  test_verdict_rule.py
(+106 files in other folders)
